# Ballistics

./: CMakeLists.txt
src/: CMakeLists.txt
src/ballistics/GNSS/: PositionDetermination.h  RinexParser.h  SP3Parser.h
src/ballistics/atmosphere/: Atmosphere.cpp  Atmosphere.hpp  (+2 more)
tests/: CMakeLists.txt  test01_init_Time.cpp  test02_add_sub_sec.cpp  test03_sub_Time_from_Time.cpp  test04_to_mgd.cpp  test05_UTC.cpp  test06_TAI.cpp  test07_UT1.cpp  test08_TT.cpp  test09_TCG.cpp  test10_TDB.cpp  test11_TCB.cpp  test12_TimeConverter.cpp  test13_FrameConverter.cpp  test14_Ephemeris.cpp  test15_AtmosphereGraph.cpp  test16_Atmosphere.cpp  test17_Shadow.cpp  test18_ThirdBodyGravity.cpp  test19_CartesianToKeplerian.cpp  test20_KeplerianToCartesian.cpp  test21_KeplerianToKeplerian.cpp  test22_ExplicitRungeKutta.cpp  test22_ExplicitRungeKutta.py  test23_ExplicitRungeKuttaGraph.cpp  test23_ExplicitRungeKuttaGraph.py  test24_ImplicitRungeKutta.cpp  test24_ImplicitRungeKutta.py  test25_ImplicitRungeKuttaGraph.cpp  test25_ImplicitRungeKuttaGraph.py  test26_NestedRungeKutta.cpp  test26_NestedRungeKutta.py  test27_NestedRungeKuttaGraph.cpp  test27_NestedRungeKuttaGraph.py  test28_IntegrateSimpleOrbit.cpp  test28_IntegrateSimpleOrbit.py  test29_IntOrbWithoutRotOfEarth.cpp  test29_IntOrbWithoutRotOfEarth.py  test30_CheckingForAutonomy.cpp  test30_CheckingForAutonomy.py  (+11 more)
tests/utility/: TimeResult.hpp  satelliteData.h  test22Data.txt  test23Data.txt  test24Data.txt  test25Data.txt  test26Data.txt  test27Data.txt  test28Data.txt  test29Data.txt  test30Data.txt  test31Data.txt  test32Data.txt
(+44 files in other folders)
